syntax = "proto3";

package gameplay_service;

message VisitRequest {
    string userId = 1;
    string followeeUserId = 2;
}